...
                android:clickable="true"
                app:backgroundTint="@android:color/white"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="Recipe Name"
                android:maxWidth="320dp"
                android:textSize="25dp"/>


            <Button
                android:id="@+id/select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="Select Categories"
                android:textAlignment="center"
                android:textColor="#9C9C9C"
                android:textColorHint="#7E7E7E"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/prepare_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/customborder"
                android:hint="Preparation Time (mins)"
                android:inputType="number"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/serving_text"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/customborder"
                    android:gravity="center"
                    android:inputType="number"
...
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="Comment"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/comment_text"
                android:layout_width="367dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:background="@drawable/customborder"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
...
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:text="Delete" />

                <Button
                    android:id="@+id/edit_ings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:text="Edit" />
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientsInRep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overScrollMode="never" />

            </LinearLayout>
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Save Recipe" />

                <Button
                    android:id="@+id/delete_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Delete Recipe/Cancel" />
            </LinearLayout>
...
