<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.SaveIngredientFragment"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.ViewIngredientFragment"
        android:orientation="horizontal"

        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/arrow_back_48px" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name/description"
                style="@style/QuestionHeader"/>

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Description"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:maxLength="30"
                android:textCursorDrawable="@null"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unit"
                style="@style/QuestionHeader"/>

            <Spinner
                android:id="@+id/editUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amount"
                style="@style/QuestionHeader"/>

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textCursorDrawable="@null"/>


            <TextView
                style="@style/QuestionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Category" />

            <EditText
                android:id="@+id/editCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:focusable="false"
                android:textCursorDrawable="@null"/>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please fill all fields and try again"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".fragments.ViewIngredientFragment"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="0dp"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/save_button"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:id="@+id/cancel_button"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
