<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".fragments.MainMenuFragment"
    >

    <Button
        android:id="@+id/ingredients_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingredients" />

    <Button
        android:id="@+id/recipes_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recipes" />
</LinearLayout>
